add lab1.html to this repo:

--- a/databasesAndWebApplications/html5.html
+++ b/databasesAndWebApplications/html5.html
@@ -11,8 +11,17 @@
 
 <p style = "text-align:center"> using style attribute to center</p>
 <form action = html5.html>
+
 <input type = "text" name = "u cannot see" value = "input something here">
 <input type = "submit" name = "u cannot see" value = "input something here">
+</br>
+
+<b>select your answer</b></br>
+<select name = "single choice">
+<option value = "a">A</option>
+<option value = "b">B</option>
+<option value  = "c">C</option>
+</select>
 </form>
 </body>
 </html>
