--- a/databasesAndWebApplications/lab2/cssPractice.html
+++ b/databasesAndWebApplications/lab2/cssPractice.html
@@ -6,28 +6,28 @@
 </head>
 <body>
 <div id="container">
-<div id="logo">
-<h1> My personal webiste</h1>
-</div>
-<div id="leftColumn">
-<a href="http://google.com">Home</a>
-<a href="http://youtube.com" target="_blank">Youtube</a>
-<a href="http:/href/www.w3schools.com" target="_blank">W3Schools</a> 
-</div>
-<div id="rightColumn">
-<p title="first paragraph">This is where I will add a paragraph text</p>
-<img src="portrait.jpg" alt="my photo" title="this is title?">
-<ul>
-<li>List text 1</li>
-<li>List text 2</li>
-<li>List text 3</li>
-<li>List text 4</li>
-<li>List text 5</li>
-<li>...</li>
-</ul>
-<p>University Rd, Leicester<br> LE1 7RH <br> 0116 252 2522</p>
-<p> Copyright &copy; 2017 YOUR_NAME<br>
-<a href="mailto:YourEmail@le.ac.uk">YourEmail@le.ac.uk</a></p>
-</div>
+	<div id="logo">
+        <h1> My personal webiste</h1>
+	</div>
+	<div id="leftColumn">
+        <a class="navBar" href="http://google.com">Home</a>
+        <a class="navBar" href="http://youtube.com" target="_blank">Youtube</a>
+        <a class="navBar" href="http:/href/www.w3schools.com" target="_blank">W3Schools</a> 
+    </div>
+    <div id="rightColumn">
+        <p title="first paragraph">This is where I will add a paragraph text</p>
+        <img src="portrait.jpg" alt="my photo" title="this is title?">
+        <ul>
+            <li>List text 1</li>
+            <li>List text 2</li>
+            <li>List text 3</li>
+            <li>List text 4</li>
+            <li>List text 5</li>
+            <li>...</li>
+        </ul>
+        <p>University Rd, Leicester<br> LE1 7RH <br> 0116 252 2522</p>
+        <p> Copyright &copy; 2017 YOUR_NAME<br>
+        <a href="mailto:YourEmail@le.ac.uk">YourEmail@le.ac.uk</a></p>
+	</div>
 </div>
 </body>
