--- a/databasesAndWebApplications/ass1/home.html
+++ b/databasesAndWebApplications/ass1/home.html
@@ -15,7 +15,7 @@
     <div id="content">
         <div id="nav">
             <ul>
-            <li>Navigation</li>
+            <li><h2>Navigation</h2></li>
             <li>Home</li>
             <li>About</li>
             <li>Contact</li>
