--- a/databasesAndWebApplications/ass1/home.html
+++ b/databasesAndWebApplications/ass1/home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="home.css">
+<link rel="stylesheet" href="style.css">
 <title>my website</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
         <div id="nav">
             <ul>
             <li><h2>Navigation</h2></li>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="mailto::bearer1024@gmail.com">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
